# nc-geo

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.rst  nc-geo.sln  nc-geo.vcxproj  nc-geo.vcxproj.filters  split_algorithms.sln  split_algorithms.vcxproj  split_algorithms.vcxproj.filters  split_algorithms_test.vcxproj  split_algorithms_test.vcxproj.filters
gtest/: gtest-all.cc
gtest/gtest/: gtest.h
include/: basic_types.h
split_algorithms_test/: cq_algorithm_unittest.cpp  cq_hashmap_unittest.cpp  cq_vector_unittest.cpp  main.cpp  mutable_polygon_unittest.cpp  polygon_marker_unittest.cpp  polygon_merger_unittest.cpp  polygon_tile_splitter_unittest.cpp  polyline_polygon_splitter_unittest.cpp  polyline_tile_splitter_unittest.cpp  small_object_allocator_unittest.cpp  stdafx.h
src/: basic_types.h  cq_algorithm.h  cq_hashmap.h  cq_heap.h  cq_vector.h  mutable_polygon.cpp  mutable_polygon.h  polygon_marker.cpp  polygon_marker.h  polygon_merger.cpp  polygon_merger.h  polygon_tile_splitter.cpp  polygon_tile_splitter.h  polyline_polygon_splitter.cpp  polyline_polygon_splitter.h  polyline_tile_splitter.cpp  polyline_tile_splitter.h  small_object_allocator.h  static_polygon.cpp  static_polygon.h  stdafx.h
test/: cq_algorithm_unittest.cpp  cq_hashmap_unittest.cpp  cq_vector_unittest.cpp  main.cpp  mutable_polygon_unittest.cpp  polygon_marker_unittest.cpp  polygon_merger_unittest.cpp  polygon_tile_splitter_unittest.cpp  polyline_polygon_splitter_unittest.cpp  polyline_tile_splitter_unittest.cpp  small_object_allocator_unittest.cpp
(+8 files in other folders)
